[package]
name = "demand"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
nom = "8.0.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
